Add fuzziness setting.

--- a/resources/configure-fuzzy-text.html
+++ b/resources/configure-fuzzy-text.html
@@ -8,9 +8,9 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Configure Fuzzy Text</title>
-	<meta name="description" content="configuration page for Fuzzy Text International, a Pebble watchface">
-	<meta name="author" content="Jesse Hallett <jesse@sitr.us>">
+	<title>Configure Fuzzier Text</title>
+	<meta name="description" content="configuration page for Fuzzier Text International, a Pebble watchface">
+	<meta name="author" content="Michael Vezie <mlv@pobox.com>">
 
 	<!-- Mobile Specific Metas
   ================================================== -->
@@ -32,18 +32,18 @@
 
 	<div class="container">
 		<header>
-			<h1>Configure Fuzzy Text Int'l</h1>
+			<h1>Configure Fuzzier Text Int'l</h1>
 		</header>
 		
 		<div id="update-available" class="hidden bg-danger" style="padding:0.75em">
-			<p>There is a new version of Fuzzy Text International
+			<p>There is a new version of Fuzzier Text International
 			available - some settings will not work until you update to
 			the new version. <a href="CHANGES.html">See
 			details</a></p>
 		</div>
 
 		<div id="up-to-date" class="hidden bg-info" style="padding:0.75em">
-			<p>Your version of Fuzzy Text International is up-to-date.
+			<p>Your version of Fuzzier Text International is up-to-date.
 			<a href="CHANGES.html">See changes</a></p>
 		</div>
 
@@ -141,6 +141,46 @@
 			</fieldset>
 
 			<fieldset>
+				<legend>Fuzziness:</legend>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="five" checkked />
+						four twenty
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="fifteen" />
+						quarter after four
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="thirty" />
+						half past four
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="tod" />
+						late afternoon
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="weekday" />
+						Thursday afternoon
+					</label>
+				</div>
+				<div class="radio">
+					<label>
+						<input type="radio" name="fuzziness" value="week" />
+						End of week
+					</label>
+				</div>
+			</fieldset>
+
+			<fieldset>
 				<a href="pebblejs://close" class="btn btn-lg btn-default" role="button">Cancel</a>
 				<button type="button" class="btn btn-lg btn-primary" id="b-submit">Save</button>
 			</fieldset>
@@ -153,7 +193,7 @@
 
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script>
-		var LATEST = "1.2.1";
+		var LATEST = "2.0";
 
 		function saveOptions() {
 			var params = {};
@@ -164,7 +204,8 @@
 			var options = {
 				invert:		params.invert === 'on',
 				text_align:	params.align || 'center',
-				lang:		params.lang
+				lang:		params.lang,
+		        fuzziness:  params.fuzziness,
 			}
 			return options;
 		}
@@ -183,6 +224,11 @@
 			if (opts && opts.lang) {
 				$form.find('[name="lang"]').filter(function(i, btn) {
 					return btn.value === opts.lang;
+				}).prop('checked', true);
+			}
+			if (opts && opts.fuzziness) {
+				$form.find('[name="fuzziness"]').filter(function(i, btn) {
+					return btn.value === opts.fuzziness;
 				}).prop('checked', true);
 			}
 		}
